--- a/NationalClimaticDataCenter/README.Rmd
+++ b/NationalClimaticDataCenter/README.Rmd
@@ -9,7 +9,7 @@ output:
         smart: true
         toc: true
 ---
-<link rel="stylesheet" type="text/css" href="stylesheet.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
 
 ## Data Source
 
@@ -24,7 +24,7 @@ and the [National Oceanographic Data Center][03], which includes the
 [National Coastal Data Development Center][04] – have merged into the National Centers 
 for Environmental Information (NCEI).
 
-<center>![NOAA National Centers for Environmental Information](noaa-ncei.jpg)</center>
+<center>![NOAA National Centers for Environmental Information](images/noaa-ncei.jpg)</center>
 
 "...(NCEI) is responsible for preserving, monitoring, assessing, and providing 
 public access to the Nation's treasure of climate and historical weather 
