--- a/NationalClimaticDataCenter/README.Rmd
+++ b/NationalClimaticDataCenter/README.Rmd
@@ -67,12 +67,11 @@ depending on the event type.
 
 The various files that comprise the Storm Events Database are available from
 NOAA via HTTP or FTP. For the later, the top of the folder tree for storm
-events starts [here](ftp://ftp.ncdc.noaa.gov/pub/data/swdi/stormevents/). If you 
-are using Windows® then it would be best to open the FTP site in your Windows 
-Explorer rather than use your browser. If you happen to be using Mozilla, then 
-an add-in like DownThemAll! is likely the most useful tool for pulling data to 
-your machine since the application supports multiple concurrent streams, in this 
-case only limited by NOAA server policies.
+events starts [here][08]. If you are using Windows® then it would be best to open 
+the FTP site in your Windows Explorer rather than use your browser. If you happen 
+to be using Mozilla, then an add-in like DownThemAll! is likely the most useful 
+tool for pulling data to your machine since the application supports multiple 
+concurrent streams, in this case only limited by NOAA server policies.
 
 Overall, the Storm Events Database (either presented in separate per-year files
 for each reporting type, or in a comprehesive Microsoft® Access database, which
@@ -201,4 +200,4 @@ invaluable to performing a clear, logical, and convincing data analysis.
 [05]:http://www.ncei.noaa.gov/
 [06]:https://www.ncdc.noaa.gov/stormevents/pd01016005curr.pdf
 [07]:https://www.ncdc.noaa.gov/stormevents/details.jsp?type=collection
-[08]:ftp://ftp.ncdc.noaa.gov/pub/data/swdi/stormevents/
+[08]:http://www1.ncdc.noaa.gov/pub/data/swdi/stormevents/
